--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
     "email": "sjkbar@ani-park.com"
   },
   "dependencies": {
+  	"express": "3.x",
+  	"underscore": "1.5.2",
+	"async" : "0.2.9",
+	"mongoose" : "3.8.3",
+	"ejs" : "0.8.5"
   },
   "readme": "The BasicData uploader for ma9real.",
   "readmeFilename": "README.md",
